5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1644_1054.log
== TEST (2019-04-09 17:30:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y
if(reta==3):
	mensagem = "ponto pertence a reta."
	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- OUTPUT:
ponto pertence a reta.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:30:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y
if(reta==3):
	mensagem = "ponto pertence a reta."
	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- OUTPUT:
ponto pertence a reta.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:31:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y
if(reta==3):
	mensagem = "ponto pertence a reta."
	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- EXECUTION TIME:
0.145474
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta.
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:32:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y-3
if(reta==0):
	mensagem = "ponto pertence a reta."
	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- OUTPUT:
ponto pertence a reta.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:32:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y-3
if(reta==0):
	mensagem = "ponto pertence a reta."
	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- EXECUTION TIME:
0.14093
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta.
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:35:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y-3
if(reta==0):
	mensagem = "ponto pertence a reta."	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- OUTPUT:
ponto pertence a reta.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:35:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y-3
if(reta==0):
	mensagem = "ponto pertence a reta."	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- EXECUTION TIME:
0.283242
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta.
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:36:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y=3
if(reta==3):
	mensagem = "ponto pertence a reta."	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- EXECUTION TIME:
0.22192
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 7
    reta=2*x+y=3
        ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:36:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y
if(reta==3):
	mensagem = "ponto pertence a reta."	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- EXECUTION TIME:
0.194341
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta.
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:40:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y
if(reta==3):
	mensagem = "ponto pertence a reta."	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- EXECUTION TIME:
0.124077
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta.
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:41:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y
if(reta==3):
	mensagem = "ponto pertence a reta."	
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem.lower())
-- OUTPUT:
ponto pertence a reta.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:41:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y
if(reta==3):
	mensagem = "ponto pertence a reta."	
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem.lower())
-- EXECUTION TIME:
0.122918
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta.
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:41:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y-3
if(reta==0):
	mensagem = "ponto pertence a reta."	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- OUTPUT:
ponto pertence a reta.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:41:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta=2*x+y-3
if(reta==0):
	mensagem = "ponto pertence a reta."	
else:
	mensagem = "ponto nao pertence a reta."
print(mensagem.lower())
-- EXECUTION TIME:
0.278664
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta.
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:52:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("Qual a coordenada x? "))
y=int(input("Qual a coordenada y? "))

reta = 2 * x + y
if(reta==3):
	mensagem = "ponto pertence a reta"	
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem.lower())
-- EXECUTION TIME:
0.19026
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
